# BlinkyShowSoftware

./: .gitignore  BUILDING.txt  BlinkyShowSoftware.sln
BlinkyShowSoftware/: main.cpp
BlinkyShowSoftware.xcodeproj/: project.pbxproj
BlinkyShowSoftware.xcodeproj/xcshareddata/xcschemes/: ShowClient.xcscheme
ServerEmu/: CMakeLists.txt  ServerEmu.sln  ServerEmu.vcxproj  ServerEmu.vcxproj.filters  main.cpp
ShowClient/: CMakeLists.txt  ShowClient.vcxproj  ShowClient.vcxproj.filters  clientconfig.cpp  clientconfig.hpp  main.cpp  pruconfig.hpp  showclient.cpp  showclient.hpp
ShowServer/: CMakeLists.txt  ShowServer.sln  ShowServer.vcxproj  ShowServer.vcxproj.filters  configfile.cpp  configfile.hpp  main.cpp  playlist.cpp  playlist.hpp  serverclient.cpp  serverclient.hpp  showmanager.cpp  showmanager.hpp  showserver.cpp  showserver.hpp
beagle/: pruconfig.hpp
beagle/BeaglePRU/: makefile
beagle/device-overlay/: blinkylight.dts
beagle/deviceoverlay/: BeagleLights.dts  DIYBLIGHTS-00A0.dtbo  DIYBLIGHTS.dts  blinkylight.dts
beagle/microcode/: makefile
beagle/setup/: 01-Base Beagle Bone imaging.txt  01-FlashingTheBeaglebone.txt  02-AddingUserToSudo.txt  02-Updating_software_SD_card.txt  03-Build-Blinky.txt  03-Making-SD-Flash.txt  03-Passwords.txt  03-TimeZone.txt  04-HowToSSHByRoot.txt  04-Passwords.txt  04-Service-Setup.txt  04a-Server-Setup.txt  05-Build-Blinky.txt  05-MountingSDCard.txt  06-TimeZone-Msg.txt  07-ALSASound.txt  08-ALSASound.txt  08-PRUDevelopment.txt  09-BuildingClient.txt  09-BuildingMicrocode  09-DeviceTree.txt  10-BuildingClient.txt  10-BuildingMicrocode  11-HowToCreateAnImage.txt  5-HowToSSHByRoot.txt  ALSASound.txt  AddingUserToSudo.txt  BuildingMicrocode  FlashingTheBeaglebone.txt  HowToCreateAnImage.txt  HowToSSHByRoot.txt  MountingSDCard.txt  PRUDevelopment.txt  TimeZone.txt
beagle/startup/: DIYBLIGHTS.service  startBeagleClient.sh
beagle/startup-service/: blinkylight.service  blinkyshow.target  firmware-leds.sh  media.automount  pru-led.path  pru-led.service  showclient.service  showclient.sh  startShowClient.sh
containers/lightfile/: lightfile.cpp  lightfile.hpp  lightheader.cpp  lightheader.hpp
containers/wavfile/: chunkheader.cpp  chunkheader.hpp  fileheader.cpp  fileheader.hpp  mwavfile.cpp  mwavfile.hpp  wavdatachunk.cpp  wavdatachunk.hpp  wavfile.cpp  wavfile.hpp  wavfmtchunk.cpp  wavfmtchunk.hpp
controllers/: controller.cpp  controller.hpp  frameclock.cpp  frameclock.hpp  lightcontroller.cpp  lightcontroller.hpp  mediacontroller.cpp  mediacontroller.hpp  pruconfig.cpp  pruconfig.hpp  statusled.cpp  statusled.hpp
examples/: client.cfg  playlist.cfg  server.cfg
network/: allpackets.hpp  blinkclient.cpp  blinkclient.hpp  client.cpp  client.hpp  identpacket.cpp  identpacket.hpp  loadpacket.cpp  loadpacket.hpp  nameclient.cpp  nameclient.hpp  noppacket.cpp  noppacket.hpp  packet.cpp  packet.hpp  playpacket.cpp  playpacket.hpp  showpacket.cpp  showpacket.hpp  statuspacket.cpp  statuspacket.hpp  syncpacket.cpp  syncpacket.hpp
teststuff/: CMakeLists.txt  main.cpp
utility/: buffer.cpp  buffer.hpp  dbgutil.hpp  mapfile.cpp  mapfile.hpp  strutil.hpp  timeutil.cpp  timeutil.hpp
